--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "sass": "^1.49.0",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
@@ -68,11 +69,11 @@
     "@storybook/node-logger": "^6.4.14",
     "@storybook/preset-create-react-app": "^4.0.0",
     "@storybook/react": "^6.4.14",
-    "postcss": "^8.4.5",
+    "autoprefixer": "^10.4.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
-    "webpack": "^5.67.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "webpack": "^5.67.0"
   }
 }
